--- a/frontend/assets/css/style.css
+++ b/frontend/assets/css/style.css
@@ -72,12 +72,12 @@ ul.dropdown-menu a {
     border: 1px solid transparent;
 }
 .navbar-light .navbar-brand,.navbar-light .navbar-brand:hover, .navbar-light .navbar-brand:focus {
-    color: #2dde98;
-    font-size: 30px;
+    color: #ffffff;
+    font-size: 31px;
     font-weight: 600;
     letter-spacing: 1px;
     padding: 5px 20px;
-    border: 1px solid #2dde98;
+    border: 3.5px solid #ffffff;
     position: relative;
     text-shadow: 0 1px 2px rgba(0, 0, 0, 0.37);
 }
