--- a/frontend/app/components/admin/contracts/contracts.html
+++ b/frontend/app/components/admin/contracts/contracts.html
@@ -128,7 +128,7 @@
           <li class="nav-item">
             <a class="nav-link" href="" ng-click="goTopage('/admin/buildings')">
               <i class="fas fa-fw fa-building"></i>
-              <span>Buildings</span></a>
+              <span>Properties</span></a>
           </li>
   
           <li class="nav-item active">
