--- a/frontend/app/components/admin/buildings/single.buildings.html
+++ b/frontend/app/components/admin/buildings/single.buildings.html
@@ -128,7 +128,7 @@
         <li class="nav-item active">
           <a class="nav-link" href="" ng-click="goTopage('/admin/buildings')">
             <i class="fas fa-fw fa-building"></i>
-            <span>Buildings</span></a>
+            <span>Properties</span></a>
         </li>
 
         <li class="nav-item">
@@ -158,7 +158,7 @@
               <a href="" ng-click="goTopage('/admin/home')">Dashboard</a>
             </li>
             <li class="breadcrumb-item">
-                <a href="" ng-click="goTopage('/admin/buildings')">Buildings</a>
+                <a href="" ng-click="goTopage('/admin/buildings')">properties</a>
               </li>
             <li class="breadcrumb-item active">details</li>
           </ol>
@@ -169,13 +169,96 @@
 
           <!-- DataTables Example -->
           <div class="card mb-3">
-            {{data}}
-            
+            <div class="row">
+              <div class="col-md-6">
+                  <div class="card-header">
+                      <i class="fas fa-building"></i>
+                      Property Details
+                  </div>
+                  <div class="card-body">
+                    <div class="row">
+                      <div class="col-md-12">
+                        <label><b>City:</b></label> {{data.city}}<br>
+                        <label><b>Address:</b></label> {{data.address}}<br>
+                        <label><b>Level:</b></label> {{data.level}}<br>
+                        <label><b>Area:</b></label> {{data.area}}<br>
+                        <label><b>Number of rooms:</b></label> {{data.numberOfRooms}}<br>
+                        <label><b>number of bathrooms:</b></label> {{data.numberOfBathrooms}}<br>
+                        <label><b>number of balcony:</b></label> {{data.numberOfBalcony}}<br>
+
+                      </div>
+                    </div>
+                    <div class="row" style="height: 100px; ">
+                        <div class="col-md-12">
+                          <button style="width: 100%;margin-top: 50px;" ng-show="data.approved ==0" type="button" class="btn btn-sm btn-success" ng-click="approve(data)">Approve Property</button>
+                        </div>  
+                    </div>
+                  </div>
+              </div>
+              <div class="col-md-6">
+                  <div class="card-header">
+                      <i class="fas fa-user"></i>
+                      Owner Details
+                  </div>
+                  <div class="card-body">
+                      <label><b>Name:</b></label> {{data.owner.name}}<br>
+                      <label><b>NationalId:</b></label> {{data.owner.nationalId}}<br>
+                      <label><b>Phone:</b></label> {{data.owner.phone}}<br>
+                      <label><b>Joining Date:</b></label> {{data.owner.createdAt}}<br>
+                  </div>
+                  <div class="card-header">
+                      <i class="fas fa-bolt"></i>
+                      Property Usage
+                  </div>
+                  <div class="card-body" >
+                    <div class="row">
+                      <div class="col-md-8">
+                          <label><b>Water total to pay: </b></label> {{data.waterTotalToPay}} LE
+                      </div>
+                      <div class="col-md-4">
+                          <button style="float: right"ng-show="data.waterTotalToPay > 0" type="button" class="btn btn-sm btn-primary" ng-click="deductAmount(data,1)">deduct amount</button>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-md-8">
+                          <label><b>Gas total to pay: </b></label> {{data.gasTotalToPay}} LE
+                      </div>
+                      <div class="col-md-4">
+                          <button style="float: right"ng-show="data.gasTotalToPay > 0" type="button" class="btn btn-sm btn-primary" ng-click="deductAmount(data,2)">deduct amount</button>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-md-8">
+                          <label><b>Electricity total to pay: </b></label> {{data.electricityTotalToPay}} LE
+                      </div>
+                      <div class="col-md-4">
+                          <button style="float: right"ng-show="data.electricityTotalToPay > 0" type="button" class="btn btn-sm btn-primary" ng-click="deductAmount(data,3)">deduct amount</button>
+                      </div>
+                    </div>
+                    <button  type="button" class="btn btn-sm btn-success" ng-click="addingData(data)">Add Reads</button>
+
+                  </div>
+              </div>
+
+            </div>
+            <div class="row">
+              <div class="col-md-12">
+                  <div class="card-header">
+                      <i class="fas fa-map-marked-alt"></i>
+                      Property Location
+                  </div>
+                  <div class="card-body">
+                      <div style="width: 100%; height: 480px" id="mapContainer"></div>
+                  </div>
+              </div>
+            </div>
           </div>
 
         </div>
         <!-- /.container-fluid -->
-
+        <input type="hidden" id="lat" value="{{data.latitude}}"></input>
+        <input type="hidden" id="long" value="{{data.longitudes}}"></input>
+        <input type="hidden" id="zoom" value="10"></input>
         <!-- Sticky Footer -->
         <footer class="sticky-footer">
           <div class="container my-auto">
