--- a/frontend/app/components/admin/home/dashboard.html
+++ b/frontend/app/components/admin/home/dashboard.html
@@ -144,7 +144,7 @@
         <li class="nav-item">
           <a class="nav-link" href="" ng-click="goTopage('/admin/buildings')">
             <i class="fas fa-fw fa-building"></i>
-            <span>Buildings</span></a>
+            <span>Properties</span></a>
         </li>
 
         <li class="nav-item">
@@ -200,7 +200,7 @@
                   <div class="card-body-icon">
                     <i class="fas fa-fw fa-building"></i>
                   </div>
-                  <div class="mr-5">10M Buildings</div>
+                  <div class="mr-5">10M Properties</div>
                 </div>
                 <a class="card-footer text-white clearfix small z-1" href="" ng-click="goTopage('/admin/buildings')">
                   <span class="float-left">View Details</span>
@@ -245,17 +245,28 @@
           </div>
 
           <!-- Area Chart Example-->
-          <div class="card mb-3 col-md-9">
+          <div class="row">
+          <div class="card mb-3 col-md-7">
             <div class="card-header">
               <i class="fas fa-chart-area"></i>
               Registered buildings By city Chart</div>
             <div class="card-body">
-
-                    <div id="chartdiv"></div>
-
+                <div id="chartdiv"></div>
             </div>
             <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
           </div>
+          <div class="col-lg-5">
+                <div class="card mb-3">
+                  <div class="card-header">
+                    <i class="fas fa-chart-bar"></i>
+                    Buy and sell rate per month</div>
+                  <div class="card-body">
+                    <canvas id="myBarChart" width="100%" height="50"></canvas>
+                  </div>
+                  <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
+                </div>
+              </div>
+            </div>
 
           <!-- DataTables Example -->
           
@@ -314,7 +325,7 @@
 
     <!-- Demo scripts for this page-->
     <script src="js/demo/datatables-demo.js"></script>
-    <script src="js/demo/chart-area-demo.js"></script>
+    <script src="js/demo/chart-bar-demo.js"></script>
 
   </body>
 
