--- a/frontend/app/components/admin/statistics/statistics.html
+++ b/frontend/app/components/admin/statistics/statistics.html
@@ -159,27 +159,125 @@
             </li>
             <li class="breadcrumb-item active">Statistics</li>
           </ol>
-
-         
-
-          
-
           <!-- DataTables Example -->
           <div class="row">
-                <div class="col-lg-6">
-                  <div class="card mb-3">
-                    <div class="card-header">
-                      <i class="fas fa-chart-bar"></i>
-                      Buy and sell rate per month</div>
-                    <div class="card-body">
-                      <canvas id="myBarChart" width="100%" height="50"></canvas>
-                    </div>
-                    <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
+            <div class="col-xl-3 col-sm-6 mb-3">
+              <div class="card text-black bg-light o-hidden h-100">
+                <div class="card-body">
+                  <div class="card-body-icon">
+                      <i class="fas fa-share-alt"></i>
                   </div>
+                  <div class="mr-5">1 Peer</div>
                 </div>
-                
               </div>
+            </div>
+            <div class="col-xl-3 col-sm-6 mb-3">
+              <div class="card rd text-black bg-light o-hidden h-100">
+                <div class="card-body">
+                  <div class="card-body-icon">
+                      <i class="fas fa-boxes"></i>
+                  </div>
+                  <div class="mr-5">9 Block</div>
+                </div>
+              </div>
+            </div>
+            <div class="col-xl-3 col-sm-6 mb-3">
+              <div class="card rd text-black bg-light o-hidden h-100">
+                <div class="card-body">
+                  <div class="card-body-icon">
+                      <i class="fas fa-exchange-alt"></i>
+                  </div>
+                  <div class="mr-5">10 TX</div>
+                </div>
+              </div>
+            </div>
+            <div class="col-xl-3 col-sm-6 mb-3">
+              <div class="card text-black bg-light o-hidden h-100">
+                <div class="card-body">
+                  <div class="card-body-icon">
+                    <i class="far fa-id-card"></i>
+                  </div>
+                  <div class="mr-5">0 Chain code</div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
 
+                  <div class="card mb-3 col-md-7">
+                      <div class="card-header">
+                        Block#5</div>
+                      <div class="card-body">
+                          <table class="table">
+                              <thead>
+                                <tr>
+                                  <td>number</td>
+                                  <td>5</td>
+                                </tr>
+                                <tr>
+                                    <td>privouse hash</td>
+                                    <td>512sadsad23eed$6532dvashgfdsvafg233#@dDdsfsfs</td>
+                                  </tr>
+                                  <tr>
+                                      <td>data hash</td>
+                                      <td>5723476HJgdahvhsavfvavfvvhsv#fdsabbfsf32r3232</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Transaction</td>
+                                        <td>5fahfadsfsafdsafas63246#23472846274367832sfgwg</td>
+                                      </tr>
+                                </tr>
+                              </thead>
+
+                        </table>
+                      </div>
+                      <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
+                    </div>
+                    <div class="card mb-3 col-md-3">
+                        <div class="card-header">
+                          BlockList</div>
+                        <div class="card-body">
+                          <table class="table">
+                            <thead>
+                              <tr>
+                                  <th>Block#</th>
+                                  <th>TXNs</th>
+                              </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                  <td>#9</td>
+                                  <td>1</td>
+                                </tr>
+                                <tr>
+                                    <td>#10</td>
+                                    <td>1</td>
+                                  </tr>
+                                  <tr>
+                                      <td>#11</td>
+                                      <td>1</td>
+                                    </tr>
+                                    <tr>
+                                        <td>#12</td>
+                                        <td>1</td>
+                                      </tr>
+                                      <tr>
+                                          <td>#14</td>
+                                          <td>1</td>
+                                        </tr>
+                                        <tr>
+                                            <td>#16</td>
+                                            <td>1</td>
+                                          </tr>
+  
+                            </tbody>
+                          </table>
+                        </div>
+                        <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
+                      </div>
+
+          
+          </div>
         <!-- /.container-fluid -->
 
         <!-- Sticky Footer -->
