--- a/frontend/app/components/admin/contracts/contracts.html
+++ b/frontend/app/components/admin/contracts/contracts.html
@@ -171,7 +171,7 @@
               Contracts</div>
             <div class="card-body">
               <div class="table-responsive">
-                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                <table class="table table-bordered" id="dataTable2" width="100%" cellspacing="0">
                     <thead>
                         <tr>
                           <th>address</th>
